@@ -160,25 +160,16 @@ class NoticeBroadcastImpl implements NoticeBroadcast {
 
     @Override
     public NoticeBroadcast notice(NoticeTextType type, String... text) {
-        for (String line : text) {
-            List<String> list = Collections.singletonList(line);
-            NoticeContent.Text content = new NoticeContent.Text(list);
-
-            this.notifications.add(translation -> Notice.of(type.getType(), content));
-        }
+        NoticeContent.Text content = new NoticeContent.Text(List.of(text));
+        this.notifications.add(translation -> Notice.of(type.getType(), content));
 
         return this;
     }
 
     @Override
     public NoticeBroadcast notice(NoticeTextType type, Collection<String> text) {
-        for (String line : text) {
-            List<String> list = Collections.singletonList(line);
-            NoticeContent.Text content = new NoticeContent.Text(list);
-
-            this.notifications.add(translation -> Notice.of(type.getType(), content));
-        }
-
+        NoticeContent.Text content = new NoticeContent.Text(new ArrayList<>(text));
+        this.notifications.add(translation -> Notice.of(type.getType(), content));
         return this;
     }
 
